<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_nav_feedback"
        android:title="@string/title_feedback" />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_nav_contact"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_nav_account"
        android:title="@string/title_account" />

</menu>