<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingVertical="@dimen/app_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/define_dimen_48"
        android:layout_marginHorizontal="@dimen/app_padding"
        android:background="@drawable/bg_edittext_inactive"
        android:paddingStart="@dimen/define_dimen_8"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/layout_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="@dimen/define_dimen_48"
            android:layout_height="@dimen/define_dimen_48"
            android:padding="@dimen/define_dimen_8"
            android:src="@drawable/ic_nav_category"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/str_hint_search"
            android:paddingStart="@dimen/define_dimen_8"
            android:paddingEnd="@dimen/app_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgSearch" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_8"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/layout_search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/define_dimen_16"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:layout_marginBottom="@dimen/define_dimen_8"
                android:text="@string/category"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/categoryRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_padding"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/label_suggest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_category"
                tools:itemCount="6"
                tools:listitem="@layout/item_category_home" />

            <TextView
                android:id="@+id/label_suggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/define_dimen_16"
                android:layout_marginTop="@dimen/define_dimen_6"
                android:layout_marginBottom="@dimen/define_dimen_5"
                android:text="@string/product_suggest"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/productRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingHorizontal="@dimen/define_dimen_8"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_suggest"
                app:spanCount="2"
                tools:itemCount="6"
                tools:listitem="@layout/item_product_grid_home" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
